--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,9 @@ plugins {
     id 'kotlin-android'
 }
 
-apply plugin: "androidx.navigation.safeargs"
 apply plugin: 'kotlin-kapt'
-apply plugin: "kotlin-android-extensions"
+apply plugin: "kotlin-parcelize"
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdkVersion 30
@@ -62,7 +62,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
-
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
 
