--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Survay">
-        <activity android:name="com.onix.internship.survay.ui.activity.MainActivity">
+        <activity android:name="com.onix.internship.survay.ui.activity.MainActivity"
+            android:parentActivityName="com.onix.internship.survay.ui.activity.MainActivity" >>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
